k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: time-mgmt
  labels:
    name: time-mgmt
