k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: time-mgmt-service
  namespace: time-mgmt
  labels:
    app: time-mgmt
spec:
  ports:
    - port: 3000
  selector:
    app: time-mgmt
