k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: time-mgmt-ingress
  namespace: time-mgmt
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: time-mgmt.reallifeascode.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: time-mgmt-service
                port:
                  number: 3000
  tls:
    - hosts:
        - time-mgmt.reallifeascode.com
      secretName: time-mgmt-tls
